ssl-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dbserver
  labels:
    app: bc-dbserver
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: bc-dbserver
