ssl-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: routepath.ga
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbserver
                port:
                  number: 8000
